cabal-version:      3.0
name:               dmdanal
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Sebastian Graf
maintainer:         sgraf1337@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  DmdAnal
    -- other-modules:
    -- other-extensions:
    build-depends:    base
                    , transformers
                    , containers
    hs-source-dirs:   .
    default-language: GHC2021
